deployment/4-kubernetes/03_3-virtualservice-shadow.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gl5
  namespace: default
spec:
  gateways:
    - gl5-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: ms-a-service
            subset: "v1"
      mirror:
        host: ms-a-service
        subset: v2
      mirrorPercentage:
        value: 50
